# vdsm-rs

./: .gitignore  Cargo.toml  README.md
config/: vdsm.toml.example
crates/supervdsm/: Cargo.toml
crates/supervdsm/src/: exec.rs  main.rs
crates/vdsm-client/: Cargo.toml
crates/vdsm-client/src/: main.rs
crates/vdsm-common/: Cargo.toml
crates/vdsm-common/src/: config.rs  error.rs  lib.rs  logging.rs  supervdsm.rs
crates/vdsm-host/: Cargo.toml
crates/vdsm-host/src/: caps.rs  hardware.rs  lib.rs  ping.rs  setup_networks.rs  stats.rs  sysinfo.rs  vm_stats.rs
crates/vdsm-network/: Cargo.toml
crates/vdsm-network/src/: lib.rs
crates/vdsm-rpc/: Cargo.toml
crates/vdsm-rpc/src/: dispatch.rs  lib.rs  protocol.rs  server.rs  stomp.rs  tls.rs
crates/vdsm-schema/: Cargo.toml  build.rs
crates/vdsm-schema/src/: lib.rs
crates/vdsm-storage/: Cargo.toml
crates/vdsm-storage/src/: block.rs  connection.rs  domain.rs  lib.rs  sd_backend.rs  verbs.rs  volumes.rs
crates/vdsm-tool/: Cargo.toml
crates/vdsm-tool/src/: main.rs
crates/vdsm-virt/: Cargo.toml
crates/vdsm-virt/examples/: vm-test-destroy.rs  vm-test.rs
crates/vdsm-virt/src/: domain_xml.rs  lib.rs  verbs.rs
crates/vdsmd/: Cargo.toml
crates/vdsmd/src/: main.rs
packaging/: vdsm-rs.spec  vdsm-rs.sudoers  vdsm-rs.sysusers
packaging/selinux/: Makefile  vdsm_rs.fc  vdsm_rs.if  vdsm_rs.te
packaging/systemd/: supervdsmd.service  vdsm-rs.tmpfiles  vdsmd.service
packaging/systemd/stubs/: openvswitch.service  ovn-controller.service
schema/: SCHEMA_PATCHES.md  vdsm-api.yml
