[package]
name = "vdsm-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Host capability detection, stats sampling, NUMA, and CPU topology for vdsm-rs."

[dependencies]
vdsm-common = { workspace = true }
vdsm-rpc = { workspace = true }
vdsm-virt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
