[package]
name = "vdsm-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Network subsystem for vdsm-rs: nmstate + netlink (no OVS in v0)."

[dependencies]
vdsm-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
