[package]
name = "vdsm-tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "host-deploy-compatible vdsm-tool shim for vdsm-rs."

[[bin]]
name = "vdsm-tool"
path = "src/main.rs"

[dependencies]
vdsm-common = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
