[package]
name = "vdsm-virt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "libvirt wrapper, domain XML, and VM lifecycle for vdsm-rs."

[dependencies]
vdsm-common = { workspace = true }
vdsm-rpc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
