[package]
name = "vdsmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
description = "vdsm-rs main daemon binary."

[[bin]]
name = "vdsmd"
path = "src/main.rs"

[dependencies]
vdsm-common = { workspace = true }
vdsm-schema = { workspace = true }
vdsm-rpc = { workspace = true }
vdsm-virt = { workspace = true }
vdsm-host = { workspace = true }
vdsm-storage = { workspace = true }
vdsm-network = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
